# ghtui

./: .gitignore  CHANGELOG.md  CHANGELOG_KO.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.claude/commands/: pr.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Formula/: ghtui.rb
crates/ghtui/: Cargo.toml
crates/ghtui-api/: Cargo.toml
crates/ghtui-api/src/: client.rs  diff.rs  disk_cache.rs  error.rs  lib.rs  pagination.rs  rate_limit.rs
crates/ghtui-api/src/endpoints/: actions.rs  code.rs  discussions.rs  gists.rs  insights.rs  issues.rs  mod.rs  notifications.rs  orgs.rs  pulls.rs  repos.rs  search.rs  security.rs  settings.rs
crates/ghtui-api/tests/: diff_tests.rs  pagination_tests.rs  rate_limit_tests.rs
crates/ghtui-core/: Cargo.toml
crates/ghtui-core/src/: ansi.rs  command.rs  config.rs  editor.rs  error.rs  lib.rs  message.rs  router.rs  theme.rs
crates/ghtui-core/src/state/: actions.rs  code.rs  discussions.rs  gists.rs  insights.rs  issue.rs  mod.rs  notification.rs  org.rs  pr.rs  search.rs  security.rs  settings.rs
crates/ghtui-core/src/types/: actions.rs  code.rs  common.rs  discussions.rs  gists.rs  insights.rs  issue.rs  mod.rs  notification.rs  org.rs  pull_request.rs  search.rs  security.rs  settings.rs
crates/ghtui-core/tests/: router_tests.rs  state_tests.rs  types_tests.rs
crates/ghtui-widgets/: Cargo.toml
crates/ghtui-widgets/src/: diff_view.rs  editor_view.rs  input.rs  lib.rs  markdown.rs  spinner.rs  status_badge.rs  tab_bar.rs  toast.rs
crates/ghtui-widgets/tests/: markdown_tests.rs
crates/ghtui/src/: app.rs  cli.rs  command_executor.rs  event.rs  highlighter.rs  keybindings.rs  main.rs  tui.rs  view.rs
crates/ghtui/src/update/: helpers.rs  mod.rs
crates/ghtui/src/views/: account_switcher.rs  action_detail.rs  actions_list.rs  code.rs  command_palette.rs  components.rs  dashboard.rs  discussions.rs  gists.rs  help.rs  input_modal.rs  insights.rs  issue_detail.rs  issue_list.rs  keymap_settings.rs  mod.rs  notifications.rs  organizations.rs  placeholder.rs  pr_detail.rs  pr_list.rs  search.rs  security.rs  settings.rs
crates/ghtui/tests/: cli_tests.rs  update_tests.rs
