[workspace]
members = [
    "crates/ghtui",
    "crates/ghtui-api",
    "crates/ghtui-core",
    "crates/ghtui-widgets",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ohah/ghtui"

[workspace.dependencies]
# Internal crates
ghtui-api = { path = "crates/ghtui-api" }
ghtui-core = { path = "crates/ghtui-core" }
ghtui-widgets = { path = "crates/ghtui-widgets" }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP & Serialization
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Markdown & Syntax
pulldown-cmark = "0.13"

# Image rendering in terminal
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Tree-sitter (AST-based syntax highlighting)
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-swift = "0.7"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-hcl = "1.1"
tree-sitter-proto = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
toml = "1.1"
serde_yaml = "0.9"
dirs = "6"
lru = "0.18"
open = "5"
arboard = "3"
unicode-width = "0.2"
textwrap = "0.16"
base64 = "0.22"

# Error handling & Logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
