[package]
name = "ghtui-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ghtui-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
lru.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
