[package]
name = "ghtui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and state for ghtui"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
toml.workspace = true
dirs.workspace = true
serde_yaml.workspace = true
ratatui.workspace = true

[dev-dependencies]
