[package]
name = "ghtui-widgets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI widgets for ghtui"
publish = false

[dependencies]
ghtui-core.workspace = true
ratatui.workspace = true
pulldown-cmark.workspace = true
unicode-width.workspace = true
textwrap.workspace = true

[dev-dependencies]
