[package]
name = "ghtui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A comprehensive GitHub TUI built with Rust and ratatui"
keywords = ["github", "tui", "terminal", "cli", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ghtui-api.workspace = true
ghtui-core.workspace = true
ghtui-widgets.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
open.workspace = true
arboard.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syntect.workspace = true

[dev-dependencies]
