[package]
name = "ghtui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A comprehensive GitHub TUI built with Rust and ratatui"
keywords = ["github", "tui", "terminal", "cli", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ghtui-api.workspace = true
ghtui-core.workspace = true
ghtui-widgets.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
open.workspace = true
arboard.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ratatui-image.workspace = true
image.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-json.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-md.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-php.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-hcl.workspace = true
tree-sitter-proto.workspace = true

[dev-dependencies]
